--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- tailwind -->
     <link rel="stylesheet" href="build/styles.css" />
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline text-center">Hello world!</h1>
+    <h1 class="text-center font-bold pt-24 text-5xl mb-3">Live anywhere</h1>
+    <h3 class="text-center font-light text-gray-400 text-2xl">
+      Keep calm & travel on
+    </h3>
+
+    <div class="grid grid-cols-3 w-9/12 mx-auto mt-5">
+      <div class="item flex flex-col items-center">
+        <img
+          src="https://th.bing.com/th?id=OIP.SsVkfFpYfo2UMJ7_RwY6nAHaJQ&w=223&h=279&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2"
+          alt=""
+          class="rounded-2xl"
+        />
+        <span class="font-semibold text-xl my-3">Enjoy the nature</span>
+        <span class="text-gray-500">6.789 points</span>
+      </div>
+      <div class="item flex flex-col items-center">
+        <img
+          src="https://th.bing.com/th?id=OIP.SsVkfFpYfo2UMJ7_RwY6nAHaJQ&w=223&h=279&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2"
+          alt=""
+          class="rounded-2xl"
+        />
+        <span class="font-semibold text-xl my-3">Enjoy the nature</span>
+        <span class="text-gray-500">6.789 points</span>
+      </div>
+      <div class="item flex flex-col items-center">
+        <img
+          src="https://th.bing.com/th?id=OIP.SsVkfFpYfo2UMJ7_RwY6nAHaJQ&w=223&h=279&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2"
+          alt=""
+          class="rounded-2xl"
+        />
+        <span class="font-semibold text-xl my-3">Enjoy the nature</span>
+        <span class="text-gray-500">6.789 points</span>
+      </div>
+    </div>
   </body>
 </html>
