--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,11 @@
     <link rel="stylesheet" href="build/styles.css" />
   </head>
   <body>
-    <h1 class="text-center font-bold pt-24 text-5xl mb-3">Live anywhere</h1>
-    <h3 class="text-center font-light text-gray-400 text-2xl">
+    <h1 class="text-center font-bold pt-24 text-5xl mb-3 text-primary">
+      Live anywhere
+    </h1>
+    <!-- jit mode -->
+    <h3 class="text-center font-light text-[#4F4F4F] text-[20px]">
       Keep calm & travel on
     </h3>
 
@@ -29,7 +32,9 @@
           alt=""
           class="rounded-2xl"
         />
-        <span class="font-semibold text-xl my-3">Enjoy the nature</span>
+        <span class="font-semibold text-xl my-3 text-success"
+          >Enjoy the nature</span
+        >
         <span class="text-gray-500">6.789 points</span>
       </div>
       <div class="item flex flex-col items-center">
@@ -38,7 +43,9 @@
           alt=""
           class="rounded-2xl"
         />
-        <span class="font-semibold text-xl my-3">Enjoy the nature</span>
+        <span class="font-semibold text-xl my-3 text-success"
+          >Enjoy the nature</span
+        >
         <span class="text-gray-500">6.789 points</span>
       </div>
       <div class="item flex flex-col items-center">
@@ -47,7 +54,9 @@
           alt=""
           class="rounded-2xl"
         />
-        <span class="font-semibold text-xl my-3">Enjoy the nature</span>
+        <span class="font-semibold text-xl my-3 text-success"
+          >Enjoy the nature</span
+        >
         <span class="text-gray-500">6.789 points</span>
       </div>
     </div>
