--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,21 @@
     <link rel="stylesheet" href="build/styles.css" />
   </head>
   <body>
-    <h1 class="text-center font-bold pt-24 text-5xl mb-3 text-primary">
+    <h1
+      class="text-center font-bold pt-24 text-lg sm:text-2xl md:text-3xl lg:text-4xl mb-3 text-primary"
+    >
       Live anywhere
     </h1>
     <!-- jit mode -->
-    <h3 class="text-center font-light text-[#4F4F4F] text-[20px]">
+    <h3
+      class="text-center font-light text-[#4F4F4F] text-[12px] sm:text-[14px] md:text-[16px] lg:text-[20px]"
+    >
       Keep calm & travel on
     </h3>
 
-    <div class="grid grid-cols-3 w-9/12 mx-auto mt-5">
+    <div
+      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-2 gap-y-3 w-9/12 mx-auto mt-5"
+    >
       <div class="item flex flex-col items-center">
         <img
           src="https://th.bing.com/th?id=OIP.SsVkfFpYfo2UMJ7_RwY6nAHaJQ&w=223&h=279&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2"
