--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
     <!-- tailwind -->
     <link rel="stylesheet" href="build/styles.css" />
   </head>
-  <body>
+  <body class="h-[500vh] ct-scrollbar">
     <div class="root">
       <div class="content-wrapper font-poppins py-5">
         <!-- header -->
         <header class="px-2 w-full md:w-[90%] lg:w-[80%] mx-auto relative">
-          <nav class="flex flex-row justify-between items-center">
+          <nav class="flex flex-row justify-between items-center pb-5 relative">
             <div
               class="logo basis-3/6 lg:basis-1/6 text-lg lg:text-2xl font-bold p-2 cursor-pointer"
             >
@@ -116,6 +116,29 @@
               </div>
             </ul>
           </nav>
+
+          <!-- banner -->
+          <div
+            class="h-[400px] md:h-[500px] lg:h-[570px] bg-cover bg-center bg-no-repeat text-white relative z-[1]"
+            style="background-image: url(./assets/images/slide.jpg)"
+          >
+            <!-- banner content -->
+            <div
+              class="w-full h-full flex flex-col justify-center items-center bg-gray-900 bg-opacity-40 gap-y-4 text-center"
+            >
+              <h3 class="uppercase text-xs">Best place to buy design</h3>
+              <h1 class="text-4xl">Coffee Mugs</h1>
+              <p class="text-sm">
+                The most versatile furniture system ever created. Design to fit
+                your life, made to move and grow.
+              </p>
+              <button
+                class="uppercase bg-white text-black py-2 px-3 text-sm my-3"
+              >
+                Explore our products
+              </button>
+            </div>
+          </div>
         </header>
 
         <!-- main -->
