--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,59 @@
         </header>
 
         <!-- main -->
-        <main></main>
+        <main class="w-full">
+          <!-- story -->
+          <div
+            class="story flex flex-col justify-center items-center text-center py-20 px-5 lg:px-32 gap-y-6"
+          >
+            <h3 class="font-medium text-3xl max-w-[70%]">
+              Even the all -powerful Pointing has no control about the blind
+              texts.
+            </h3>
+            <p class="max-w-[70%] lg:max-w-[60%] text-gray-500">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+              ullam quis et dignissimos nisi eos veritatis vero porro saepe
+              harum dolores, placeat libero sed? Necessitatibus ea voluptate ad
+              ut ratione?
+            </p>
+            <div class="relative group">
+              <a
+                href="#"
+                class="text-black-orange/70 text-lg group-hover:text-black-orange transition-all ease-in-out duration-200"
+                >Read the full story</a
+              >
+              <span
+                class="absolute left-0 bottom-[-2px] w-full h-[1px] bg-black-orange/70 group-hover:bg-black-orange transition-all ease-in-out duration-200"
+              ></span>
+            </div>
+          </div>
+
+          <!-- feature mugs -->
+          <div class="flex flex-col justify-center items-center">
+            <div
+              class="title flex justify-center items-center text-center w-[250px]"
+            >
+              <span class="h-[1px] w-[20%] bg-gray-500"></span>
+              <h4 class="text-gray-500 basis-2/3 w-[50%] mx-2">
+                Featured Mugs
+              </h4>
+              <span class="h-[1px] w-[20%] bg-gray-500"></span>
+            </div>
+          </div>
+
+          <!-- more products -->
+          <div class="flex flex-col justify-center items-center">
+            <div
+              class="title flex justify-center items-center text-center w-[250px]"
+            >
+              <span class="h-[1px] w-[20%] bg-gray-500"></span>
+              <h4 class="text-gray-500 basis-2/3 w-[50%] mx-2">
+                More products
+              </h4>
+              <span class="h-[1px] w-[20%] bg-gray-500"></span>
+            </div>
+          </div>
+        </main>
 
         <!-- footer -->
         <footer></footer>
