Landing page part 5: Create More Products

--- a/src/index.html
+++ b/src/index.html
@@ -233,15 +233,147 @@
           </div>
 
           <!-- more products -->
-          <div class="flex flex-col justify-center items-center">
+          <div
+            class="flex flex-col justify-center items-center max w-[70%] mx-auto"
+          >
+            <!-- title -->
             <div
-              class="title flex justify-center items-center text-center w-[250px]"
+              class="title flex justify-center items-center text-center w-[250px] mb-12"
             >
               <span class="h-[1px] w-[20%] bg-gray-500"></span>
               <h4 class="text-gray-500 basis-2/3 w-[50%] mx-2">
                 More products
               </h4>
               <span class="h-[1px] w-[20%] bg-gray-500"></span>
+            </div>
+
+            <!-- products -->
+            <div
+              class="mugs-product grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 w-full my-12"
+            >
+              <div class="product-item">
+                <div class="thumbnail-item">
+                  <a href="#" class="relative group">
+                    <img src="assets/images/products/image_1.jpg" alt="" />
+                    <button class="ct-product-item-btn-explore">
+                      Explore mug
+                    </button>
+                  </a>
+                </div>
+                <div class="info-item flex flex-col items-center mt-3 gap-4">
+                  <a href="#">
+                    <h4 class="text-xl font-medium">Milk Mug</h4>
+                  </a>
+                  <div>
+                    <p class="text-gray-500 text-sm">$99.00 USD</p>
+                  </div>
+                </div>
+              </div>
+              <div class="product-item">
+                <div class="thumbnail-item">
+                  <a href="#" class="relative group">
+                    <img src="assets/images/products/image_2.jpg" alt="" />
+                    <button class="ct-product-item-btn-explore">
+                      Explore mug
+                    </button>
+                  </a>
+                </div>
+                <div class="info-item flex flex-col items-center mt-3 gap-4">
+                  <a href="#">
+                    <h4 class="text-xl font-medium">Milk Mug</h4>
+                  </a>
+                  <div>
+                    <p class="text-gray-500 text-sm">$99.00 USD</p>
+                  </div>
+                </div>
+              </div>
+              <div class="product-item">
+                <div class="thumbnail-item">
+                  <a href="#" class="relative group">
+                    <span
+                      class="absolute top-5 right-5 bg-white text-orange/80 text-md px-2 py-1"
+                      >On Sale.</span
+                    >
+                    <img src="assets/images/products/image_1.jpg" alt="" />
+                    <button class="ct-product-item-btn-explore">
+                      Explore mug
+                    </button>
+                  </a>
+                </div>
+                <div class="info-item flex flex-col items-center mt-3 gap-4">
+                  <a href="#">
+                    <h4 class="text-xl font-medium">Golden Mug Coffee</h4>
+                  </a>
+                  <div class="flex flex-row items-center gap-3">
+                    <p class="text-orange text-lg">$50.00</p>
+                    <p class="text-gray-500 text-sm line-through">$69.00 USD</p>
+                  </div>
+                </div>
+              </div>
+              <div class="product-item">
+                <div class="thumbnail-item">
+                  <a href="#" class="relative group">
+                    <span
+                      class="absolute top-5 right-5 bg-white text-orange/80 text-md px-2 py-1"
+                      >On Sale.</span
+                    >
+                    <img src="assets/images/products/image_2.jpg" alt="" />
+                    <button class="ct-product-item-btn-explore">
+                      Explore mug
+                    </button>
+                  </a>
+                </div>
+                <div class="info-item flex flex-col items-center mt-3 gap-4">
+                  <a href="#">
+                    <h4 class="text-xl font-medium">Golden Mug Coffee</h4>
+                  </a>
+                  <div class="flex flex-row items-center gap-3">
+                    <p class="text-orange text-lg">$50.00</p>
+                    <p class="text-gray-500 text-sm line-through">$69.00 USD</p>
+                  </div>
+                </div>
+              </div>
+              <div class="product-item">
+                <div class="thumbnail-item">
+                  <a href="#" class="relative group">
+                    <img src="assets/images/products/image_1.jpg" alt="" />
+                    <button class="ct-product-item-btn-explore">
+                      Explore mug
+                    </button>
+                  </a>
+                </div>
+                <div class="info-item flex flex-col items-center mt-3 gap-4">
+                  <a href="#">
+                    <h4 class="text-xl font-medium">Milk Mug</h4>
+                  </a>
+                  <div>
+                    <p class="text-gray-500 text-sm">$99.00 USD</p>
+                  </div>
+                </div>
+              </div>
+              <div class="product-item">
+                <div class="thumbnail-item">
+                  <a href="#" class="relative group">
+                    <span
+                      class="absolute top-5 right-5 bg-white text-orange/80 text-md px-2 py-1"
+                      >On Sale.</span
+                    >
+                    <img src="assets/images/products/image_2.jpg" alt="" />
+                    <button class="ct-product-item-btn-explore">
+                      Explore mug
+                    </button>
+                  </a>
+                </div>
+                <div class="info-item flex flex-col items-center mt-3 gap-4">
+                  <a href="#">
+                    <h4 class="text-xl font-medium">Golden Mug Coffee</h4>
+                  </a>
+                  <div class="flex flex-row items-center gap-3">
+                    <p class="text-orange text-lg">$50.00</p>
+                    <p class="text-gray-500 text-sm line-through">$69.00 USD</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </main>
