Landing page part 6: Create Post

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <!-- tailwind -->
     <link rel="stylesheet" href="build/styles.css" />
   </head>
-  <body class="h-[500vh] ct-scrollbar">
+  <body class="ct-scrollbar">
     <div class="root">
       <div class="content-wrapper font-poppins py-5">
         <!-- header -->
@@ -373,6 +373,67 @@
                     <p class="text-gray-500 text-sm line-through">$69.00 USD</p>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- post product -->
+          <div
+            class="flex flex-col justify-center items-center w-[90%] md:w-[80%] lg:w-[70%] mx-auto"
+          >
+            <!-- title -->
+            <div
+              class="title flex justify-center items-center text-center w-[300px] md:w-[400px] lg:w-[500px] mb-12 uppercase"
+            >
+              <span class="h-[1px] w-[10%] bg-gray-500"></span>
+              <h4 class="text-gray-500 w-[80%] mx-2">
+                Buy 2 Mugs and Get A Coffee Magazine Free
+              </h4>
+              <span class="h-[1px] w-[10%] bg-gray-500"></span>
+            </div>
+
+            <!-- post -->
+            <div class="flex flex-col lg:flex-row gap-10">
+              <!-- post image -->
+              <div
+                class="post-image basis-1/2 grid grid-cols-3 grid-rows-2 gap-4"
+              >
+                <img
+                  src="./assets/images/posts/post_1.jpg"
+                  alt=""
+                  class="col-span-2 row-span-2 w-full h-full object-cover"
+                />
+                <img
+                  src="./assets/images/posts/post_2.jpg"
+                  alt=""
+                  class="w-full h-full object-cover"
+                />
+                <img
+                  src="./assets/images/posts/post_3.jpg"
+                  alt=""
+                  class="w-full h-full object-cover"
+                />
+              </div>
+
+              <!-- post content -->
+              <div
+                class="post-content basis-1/2 px-6 py-8 text-center lg:text-left"
+              >
+                <span class="text-sm lg:text-md text-gray-500 uppercase"
+                  >Premium Offer</span
+                >
+                <h1 class="text-2xl lg:text-4xl font-[500] my-5">
+                  Get our Coffee Magazine
+                </h1>
+                <p class="text-gray-500 text-sm mb-5">
+                  The most versatile furniture system ever created. <br />
+                  Design to fit your life, made to move and grow.
+                </p>
+                <button
+                  class="bg-black text-white py-2 px-3 hover:bg-opacity-80"
+                >
+                  Start Shopping
+                </button>
               </div>
             </div>
           </div>
