--- a/src/index.html
+++ b/src/index.html
@@ -393,7 +393,7 @@
             </div>
 
             <!-- post -->
-            <div class="flex flex-col lg:flex-row gap-10">
+            <div class="flex flex-col lg:flex-row gap-10 mb-20">
               <!-- post image -->
               <div
                 class="post-image basis-1/2 grid grid-cols-3 grid-rows-2 gap-4"
@@ -435,6 +435,26 @@
                   Start Shopping
                 </button>
               </div>
+            </div>
+          </div>
+
+          <!-- parallax -->
+          <div
+            class="parallax bg-cover bg-center bg-no-repeat bg-fixed h-[400px] lg:h-[500px] mb-20"
+            style="background-image: url(./assets/parallax.jpg)"
+          ></div>
+
+          <!-- life style story -->
+          <div
+            class="flex flex-col justify-center items-center w-[70%] mx-auto"
+          >
+            <!-- title -->
+            <div
+              class="title flex justify-center items-center text-center w-[350px] mb-12 uppercase"
+            >
+              <span class="h-[1px] w-[20%] bg-gray-500"></span>
+              <h4 class="text-gray-500 w-[50%] mx-2">Life Style Stories</h4>
+              <span class="h-[1px] w-[20%] bg-gray-500"></span>
             </div>
           </div>
         </main>
