Landing page part 8: Create Lifestyle stories

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Tailwind CSS Practice</title>
 
     <!-- icon link -->
-    <link rel="icon" href="./assets/icon_web.jpg" type="image/icon type" />
+    <link rel="icon" href="./assets/icon_web_1.jpg" type="image/icon type" />
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -133,7 +133,7 @@
                 your life, made to move and grow.
               </p>
               <button
-                class="uppercase bg-white text-black py-2 px-3 text-sm my-3"
+                class="uppercase bg-white text-black py-2 px-3 text-sm my-3 tracking-wider hover:bg-opacity-80"
               >
                 Explore our products
               </button>
@@ -430,7 +430,7 @@
                   Design to fit your life, made to move and grow.
                 </p>
                 <button
-                  class="bg-black text-white py-2 px-3 hover:bg-opacity-80"
+                  class="bg-black text-white py-2 px-3 hover:bg-opacity-80 tracking-wider"
                 >
                   Start Shopping
                 </button>
@@ -441,22 +441,89 @@
           <!-- parallax -->
           <div
             class="parallax bg-cover bg-center bg-no-repeat bg-fixed h-[400px] lg:h-[500px] mb-20"
-            style="background-image: url(./assets/parallax.jpg)"
+            style="background-image: url(./assets/parallax_1.jpg)"
           ></div>
 
           <!-- life style story -->
           <div
-            class="flex flex-col justify-center items-center w-[70%] mx-auto"
+            class="flex flex-col justify-center items-center w-[90%] md:w-[80%] lg:w-[70%] mx-auto"
           >
             <!-- title -->
             <div
-              class="title flex justify-center items-center text-center w-[350px] mb-12 uppercase"
+              class="title flex justify-center items-center text-center w-[350px] lg:w-[400px] mb-12 uppercase"
             >
-              <span class="h-[1px] w-[20%] bg-gray-500"></span>
-              <h4 class="text-gray-500 w-[50%] mx-2">Life Style Stories</h4>
-              <span class="h-[1px] w-[20%] bg-gray-500"></span>
+              <span class="h-[1px] w-[10%] bg-gray-500"></span>
+              <h4 class="text-gray-500 w-[80%]">
+                Behind the mugs, lifestyle stories
+              </h4>
+              <span class="h-[1px] w-[10%] bg-gray-500"></span>
+            </div>
+
+            <!-- story -->
+            <div
+              class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 text-center lg:text-left"
+            >
+              <div class="item">
+                <img
+                  src="./assets/images/life_styles/image_1.jpeg"
+                  alt=""
+                  class="mb-4 m-h-[300px]"
+                />
+                <div class="content">
+                  <h4 class="text-lg font-medium">
+                    Health check: Why do I got a headache after I had my coffee
+                  </h4>
+                  <p class="text-gray-500 text-sm my-3">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Hic veniam nesciunt ullam ducimus!
+                  </p>
+                  <span class="text-sm text-gray-500 uppercase font-semibold"
+                    >October 2, 2022</span
+                  >
+                </div>
+              </div>
+              <div class="item">
+                <img
+                  src="./assets/images/life_styles/image_2.webp"
+                  alt=""
+                  class="mb-4 m-h-[300px]"
+                />
+                <div class="content">
+                  <h4 class="text-lg font-medium">
+                    Health check: Why do I got a headache after I had my coffee
+                  </h4>
+                  <p class="text-gray-500 text-sm my-3">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Hic veniam nesciunt ullam ducimus!
+                  </p>
+                  <span class="text-sm text-gray-500 uppercase font-semibold"
+                    >October 2, 2022</span
+                  >
+                </div>
+              </div>
+              <div class="item">
+                <img
+                  src="./assets/images/life_styles/image_3.jpg"
+                  alt=""
+                  class="mb-4 m-h-[300px]"
+                />
+                <div class="content">
+                  <h4 class="text-lg font-medium">
+                    Health check: Why do I got a headache after I had my coffee
+                  </h4>
+                  <p class="text-gray-500 text-sm my-3">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Hic veniam nesciunt ullam ducimus!
+                  </p>
+                  <span class="text-sm text-gray-500 uppercase font-semibold"
+                    >October 2, 2022</span
+                  >
+                </div>
+              </div>
             </div>
           </div>
+
+          <!-- subscribe us -->
         </main>
 
         <!-- footer -->
