Landing page part 9: Create Subscribe

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             <div
               class="logo basis-3/6 lg:basis-1/6 text-lg lg:text-2xl font-bold p-2 cursor-pointer"
             >
-              <h1>Tailwind CSS</h1>
+              <h1 class="tracking-wider">Tailwind CSS</h1>
             </div>
 
             <!-- menu -->
@@ -127,7 +127,7 @@
               class="w-full h-full flex flex-col justify-center items-center bg-gray-900 bg-opacity-40 gap-y-4 text-center"
             >
               <h3 class="uppercase text-xs">Best place to buy design</h3>
-              <h1 class="text-4xl">Coffee Mugs</h1>
+              <h1 class="text-4xl tracking-wider">Coffee Mugs</h1>
               <p class="text-sm">
                 The most versatile furniture system ever created. Design to fit
                 your life, made to move and grow.
@@ -524,6 +524,37 @@
           </div>
 
           <!-- subscribe us -->
+          <div
+            class="flex flex-col items-center w-[90%] lg:w-[80%] mx-auto mt-20 min-h-[300px] bg-gray-800 py-10"
+          >
+            <!-- title -->
+            <div
+              class="title flex justify-center items-center text-center w-[70%] lg:w-[35%] mb-12 uppercase"
+            >
+              <span class="h-[1px] w-[10%] bg-white"></span>
+              <h4 class="text-white w-[80%]">
+                Sign up and get free coffee bags
+              </h4>
+              <span class="h-[1px] w-[10%] bg-white"></span>
+            </div>
+
+            <!-- form -->
+            <h3 class="text-white text-2xl tracking-wider mb-3">
+              Coffee Updates
+            </h3>
+            <div
+              class="flex flex-col lg:flex-row justify-center items-center gap-3 w-[80%]"
+            >
+              <input
+                type="text"
+                name=""
+                id=""
+                placeholder="trannam2712@gmail.com"
+                class="ct-input-subscribe"
+              />
+              <button class="bg-white text-black px-3 py-3">Subscribe</button>
+            </div>
+          </div>
         </main>
 
         <!-- footer -->
