--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   </head>
   <body class="ct-scrollbar">
     <div class="root">
-      <div class="content-wrapper font-poppins py-5">
+      <div class="content-wrapper font-poppins pt-5">
         <!-- header -->
         <header class="px-2 w-full md:w-[90%] lg:w-[80%] mx-auto relative">
           <nav class="flex flex-row justify-between items-center pb-5 relative">
@@ -558,7 +558,100 @@
         </main>
 
         <!-- footer -->
-        <footer></footer>
+        <footer class="w-full bg-gray-100 mt-20 py-16">
+          <div class="w-[90%] lg:w-[80%] mx-auto">
+            <!-- footer top -->
+            <div
+              class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-16"
+            >
+              <!-- about -->
+              <div class="flex flex-col gap-4">
+                <h4 class="text-xl font-semibold mb-2">About</h4>
+                <p class="text-gray-600 text-sm leading-relaxed">
+                  We are a family owned & operated business serving high quality
+                  coffee since 1992. Our passion is bringing you the perfect cup
+                  every time.
+                </p>
+                <div class="flex gap-4">
+                  <a href="#" class="text-gray-600 hover:text-gray-900">
+                    <ion-icon name="logo-facebook" class="text-xl"></ion-icon>
+                  </a>
+                  <a href="#" class="text-gray-600 hover:text-gray-900">
+                    <ion-icon name="logo-instagram" class="text-xl"></ion-icon>
+                  </a>
+                  <a href="#" class="text-gray-600 hover:text-gray-900">
+                    <ion-icon name="logo-twitter" class="text-xl"></ion-icon>
+                  </a>
+                </div>
+              </div>
+
+              <!-- customer service -->
+              <div class="flex flex-col gap-3">
+                <h4 class="text-xl font-semibold mb-2">Customer Service</h4>
+                <a href="#" class="text-gray-600 hover:text-gray-900"
+                  >Contact Us</a
+                >
+                <a href="#" class="text-gray-600 hover:text-gray-900"
+                  >Shipping Policy</a
+                >
+                <a href="#" class="text-gray-600 hover:text-gray-900"
+                  >Returns & Exchange</a
+                >
+                <a href="#" class="text-gray-600 hover:text-gray-900">FAQs</a>
+              </div>
+
+              <!-- quick links -->
+              <div class="flex flex-col gap-3">
+                <h4 class="text-xl font-semibold mb-2">Quick Links</h4>
+                <a href="#" class="text-gray-600 hover:text-gray-900"
+                  >Our Story</a
+                >
+                <a href="#" class="text-gray-600 hover:text-gray-900"
+                  >Coffee Shop</a
+                >
+                <a href="#" class="text-gray-600 hover:text-gray-900"
+                  >Coffee Blog</a
+                >
+                <a href="#" class="text-gray-600 hover:text-gray-900"
+                  >Wholesale</a
+                >
+              </div>
+
+              <!-- contact -->
+              <div class="flex flex-col gap-3">
+                <h4 class="text-xl font-semibold mb-2">Contact Info</h4>
+                <p class="text-gray-600">
+                  <ion-icon
+                    name="location-outline"
+                    class="inline-block mr-2"
+                  ></ion-icon>
+                  123 Coffee Street, Brew City, BC 12345
+                </p>
+                <p class="text-gray-600">
+                  <ion-icon
+                    name="call-outline"
+                    class="inline-block mr-2"
+                  ></ion-icon>
+                  (555) 123-4567
+                </p>
+                <p class="text-gray-600">
+                  <ion-icon
+                    name="mail-outline"
+                    class="inline-block mr-2"
+                  ></ion-icon>
+                  info@coffeeshop.com
+                </p>
+              </div>
+            </div>
+
+            <!-- footer bottom -->
+            <div class="border-t border-gray-200 pt-8">
+              <p class="text-center text-gray-600 text-sm">
+                © 2024 Coffee Shop. All rights reserved.
+              </p>
+            </div>
+          </div>
+        </footer>
       </div>
     </div>
 
